New page: frontend/app/build/page.tsx Loads LEGO pieces via GraphQL (legoPieces) for the selected year. Two columns: Expenditures and Revenues with per‑piece sliders (±%). Builds a piece.* DSL in memory (delta_pct) and shows it in a code block. Scoreboard: shows total expenditure delta estimate and, after running, deficit (y0) and EU lights (y0) from runScenario. Permalink: encodes the DSL into the URL hash (dsl=...) after “Run”. Reset button and Year picker.

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "nav.explore": "Explore €1",
+  "nav.build": "Build",
   "nav.procurement": "Who gets paid?",
   "nav.whatif": "What‑if?",
   "nav.compare_eu": "Compare EU",
@@ -23,4 +24,3 @@
   "loading": "Loading…",
   "error.generic": "Failed to load"
 }
-
