xplore StatCards: Total and YoY cards with SourceLink. See: frontend/app/explore/page.tsx frontend/components/StatCards.tsx frontend/components/SourceLink.tsx Procurement StatCards: Total, Suppliers, Median with SourceLink; improved map popups show source link. See: frontend/app/procurement/page.tsx frontend/components/ProcurementMap.tsx i18n keys: Added minimal labels for stats. See: frontend/i18n/en.json frontend/i18n/fr.json

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -22,5 +22,8 @@
   "chart.treemap": "Treemap",
 
   "loading": "Loading…",
-  "error.generic": "Failed to load"
+  "error.generic": "Failed to load",
+  "stats.total": "Total",
+  "stats.yoy": "YoY",
+  "stats.na": "n/a"
 }
