Explore “stacked shares” chart
Adds 100% stacked bar option alongside Sunburst/Treemap.
Files:
frontend/components/AllocationChart.tsx
frontend/app/explore/page.tsx
frontend/i18n/en.json
, frontend/i18n/fr.json
StatCards + SourceLink on Explore/Procurement

Explore: Total and YoY cards + source star.
Procurement: Total/Suppliers/Median + source star; richer map popups.
Files:
frontend/components/StatCards.tsx
frontend/components/SourceLink.tsx
frontend/app/explore/page.tsx
frontend/app/procurement/page.tsx
frontend/components/ProcurementMap.tsx
Backlog updated

Explore/Procurement polish marked DONE with stacked shares.
Files:
BACKLOG.md
High‑Impact Backend Gaps Addressed

ODS provenance sidecar

Warmer writes data/cache/state_budget_mission_YYYY.meta.json with extraction timestamp, dataset id, year, and basic query info.
Files:
services/api/cache_warm.py
services/api/tests/test_provenance.py
Test coverage: sidecar is created and contains expected fields.
SIRENE join (enrichment) in Procurement

Best‑effort enrichment adds naf and companySize per supplier; errors are swallowed to avoid breaking flows.
Exposed via GraphQL.
Files:
services/api/models.py
services/api/data_loader.py
services/api/schema.py
frontend/app/procurement/page.tsx
frontend/components/ProcurementMap.tsx
Backlog note updated: [x] Join SIRENE attributes.
BACKLOG.md
COFOG mapping sanity test

Verifies weights sum to 1.0 for each mission mapping.
Files:
services/api/tests/test_cofog_mapping.py

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -20,6 +20,7 @@
   "lens.cofog": "COFOG",
   "chart.sunburst": "Sunburst",
   "chart.treemap": "Treemap",
+  "chart.stacked": "Stacked shares",
 
   "loading": "Loading…",
   "error.generic": "Failed to load",
