--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -20,6 +20,7 @@
   "lens.cofog": "COFOG",
   "chart.sunburst": "Rayonnement",
   "chart.treemap": "Treemap",
+  "chart.stacked": "Barres empilées",
 
   "loading": "Chargement…",
   "error.generic": "Échec du chargement",
