Playground v1: mass labels + intents + lever suggestions; Explain Panel with sum-constrained split; i18n strings. Fix GraphQL legoBaseline to include cofogMajors. Build passes; backend tests green.

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -63,9 +63,12 @@
   "build.resolution": "Resolution",
   "build.resolution_meter": "Resolution meter",
   "build.distance": "Distance",
+  "build.popular_intents": "Popular intents",
   "score.deficit_y0": "Deficit (y0)",
   "buttons.run": "Run",
   "buttons.reset": "Reset",
+  "buttons.apply": "Apply",
+  "buttons.close": "Close",
   "hud.net_delta": "Net Δ (est. y0): ",
   "hud.resolution": "Resolution",
   "hud.eu3": "EU 3%",
