--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -63,9 +63,12 @@
   "build.resolution": "Résolution",
   "build.resolution_meter": "Jauge de résolution",
   "build.distance": "Distance",
+  "build.popular_intents": "Intentions populaires",
   "score.deficit_y0": "Déficit (a0)",
   "buttons.run": "Lancer",
   "buttons.reset": "Réinitialiser",
+  "buttons.apply": "Appliquer",
+  "buttons.close": "Fermer",
   "hud.net_delta": "Δ net (estim. a0) : ",
   "hud.resolution": "Résolution",
   "hud.eu3": "UE 3%",
