UI: Explain Panel adds presets (even/proportional/focus) and shows suggestLevers per mass with quick add/remove; wire to selectedLevers. i18n strings for panel.

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -63,6 +63,17 @@
   "build.resolution": "Resolution",
   "build.resolution_meter": "Resolution meter",
   "build.distance": "Distance",
+  "build.explain": "Explain",
+  "build.target": "Target",
+  "build.specified": "Specified",
+  "build.remaining": "Remaining",
+  "build.target_met": "Target met.",
+  "build.distribute_hint": "Distribute the remaining amount across key pieces. Sliders are sum‑constrained on apply.",
+  "build.presets": "Presets",
+  "build.preset_even": "Even",
+  "build.preset_proportional": "Proportional",
+  "build.preset_focus": "Focus largest",
+  "build.suggestions": "Suggestions",
   "build.popular_intents": "Popular intents",
   "score.deficit_y0": "Deficit (y0)",
   "buttons.run": "Run",
