--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -63,6 +63,17 @@
   "build.resolution": "Résolution",
   "build.resolution_meter": "Jauge de résolution",
   "build.distance": "Distance",
+  "build.explain": "Expliquer",
+  "build.target": "Cible",
+  "build.specified": "Spécifié",
+  "build.remaining": "Restant",
+  "build.target_met": "Cible atteinte.",
+  "build.distribute_hint": "Répartissez le montant restant entre les pièces clés. Les curseurs sont contraints à la somme lors de l’application.",
+  "build.presets": "Préréglages",
+  "build.preset_even": "Égal",
+  "build.preset_proportional": "Proportionnel",
+  "build.preset_focus": "Focaliser le plus grand",
+  "build.suggestions": "Suggestions",
   "build.popular_intents": "Intentions populaires",
   "score.deficit_y0": "Déficit (a0)",
   "buttons.run": "Lancer",
