--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -75,7 +75,7 @@
   "build.preset_focus": "Focaliser le plus grand",
   "build.suggestions": "Suggestions",
   "build.popular_intents": "Intentions populaires",
-  "score.deficit_y0": "Déficit (a0)",
+  "score.deficit_y0": "Déficit (année courante)",
   "buttons.run": "Lancer",
   "buttons.reset": "Réinitialiser",
   "buttons.apply": "Appliquer",
