Add scenario charts to build page

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -63,6 +63,13 @@
   "build.resolution": "Resolution",
   "build.resolution_meter": "Resolution meter",
   "build.distance": "Distance",
+  "build.deficit_trajectory": "Deficit trajectory",
+  "build.gdp_growth_delta": "Growth (Δ GDP)",
+  "build.gdp_growth_hint": "Automatic stabiliser feedback from the macro module.",
+  "build.no_macro_data": "Run the scenario to see macro projections.",
+  "build.no_deficit_data": "Run the scenario to see the fiscal trajectory.",
+  "build.baseline": "Baseline",
+  "build.scenario": "Scenario",
   "build.explain": "Explain",
   "build.target": "Target",
   "build.specified": "Specified",
