--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -63,6 +63,13 @@
   "build.resolution": "Résolution",
   "build.resolution_meter": "Jauge de résolution",
   "build.distance": "Distance",
+  "build.deficit_trajectory": "Trajectoire du déficit",
+  "build.gdp_growth_delta": "Croissance (Δ PIB)",
+  "build.gdp_growth_hint": "Effets macroéconomiques (stabilisateurs automatiques).",
+  "build.no_macro_data": "Lancez le scénario pour voir les projections macroéconomiques.",
+  "build.no_deficit_data": "Lancez le scénario pour afficher la trajectoire budgétaire.",
+  "build.baseline": "Référence",
+  "build.scenario": "Scénario",
   "build.explain": "Expliquer",
   "build.target": "Cible",
   "build.specified": "Spécifié",
