Add scenario insights charts to build page

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -75,6 +75,13 @@
   "build.preset_focus": "Focus largest",
   "build.suggestions": "Suggestions",
   "build.popular_intents": "Popular intents",
+  "build.delta_vs_baseline": "Δ vs baseline (Y0)",
+  "build.debt_end": "Debt (Yend)",
+  "build.debt_delta": "Δ debt vs baseline (Yend)",
+  "build.growth_delta": "Growth (Δ GDP Y0)",
+  "build.deficit_chart": "Deficit trajectory",
+  "build.growth_chart": "Growth (Δ GDP)",
+  "build.chart_no_data": "No data available",
   "score.deficit_y0": "Deficit (current year)",
   "buttons.run": "Run",
   "buttons.reset": "Reset",
