--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -75,6 +75,13 @@
   "build.preset_focus": "Focaliser le plus grand",
   "build.suggestions": "Suggestions",
   "build.popular_intents": "Intentions populaires",
+  "build.delta_vs_baseline": "Δ vs scénario de référence (A0)",
+  "build.debt_end": "Dette (fin d'horizon)",
+  "build.debt_delta": "Δ dette vs scénario de référence (fin)",
+  "build.growth_delta": "Croissance (Δ PIB A0)",
+  "build.deficit_chart": "Trajectoire du déficit",
+  "build.growth_chart": "Croissance (Δ PIB)",
+  "build.chart_no_data": "Données non disponibles",
   "score.deficit_y0": "Déficit (année courante)",
   "buttons.run": "Lancer",
   "buttons.reset": "Réinitialiser",
