Add comprehensive analysis of the 2026 budgetary amendments (PLF & PLFSS) including fiscal impacts, structural changes, and socio-economic implications

--- a/frontend/i18n/en.json
+++ b/frontend/i18n/en.json
@@ -52,23 +52,24 @@
   "proc.map": "Map",
   "proc.export": "Export CSV"
   ,
-  "build.title": "Build — Workshop",
+  "build.title": "Your Arbitrations",
   "build.scoreboard": "Scoreboard",
-  "build.mass_dials": "Mass dials",
-  "build.piece_dials": "Piece dials",
+  "build.mass_dials": "Your Orientations",
+  "build.piece_dials": "Concrete Measures",
   "build.expenditures": "Expenditures",
   "build.revenues": "Revenues",
   "build.delta_exp": "ΔExpenditures (est.)",
   "build.delta_rev": "ΔRevenues (est.)",
-  "build.resolution": "Resolution",
-  "build.resolution_meter": "Resolution meter",
+  "build.resolution": "Consistency",
+  "build.resolution_meter": "Consistency Index",
   "build.distance": "Distance",
-  "build.explain": "Explain",
+  "build.explain": "Details",
   "build.target": "Target",
-  "build.specified": "Specified",
-  "build.remaining": "Remaining",
+  "build.specified": "Funded",
+  "build.remaining": "To fund",
   "build.target_met": "Target met.",
-  "build.distribute_hint": "Distribute the remaining amount across key pieces. Sliders are sum‑constrained on apply.",
+  "build.distribute_hint": "A political orientation must be supported by concrete measures. Identify funding levers to ensure the consistency of your vision.",
+  "nav.compare_eu": "European Benchmarks",
   "build.presets": "Presets",
   "build.preset_even": "Even",
   "build.preset_proportional": "Proportional",
