--- a/frontend/i18n/fr.json
+++ b/frontend/i18n/fr.json
@@ -3,7 +3,7 @@
   "nav.build": "Construire",
   "nav.procurement": "Qui est payé ?",
   "nav.whatif": "Et si… ?",
-  "nav.compare_eu": "Comparer UE",
+  "nav.compare_eu": "Repères Européens",
   "nav.sources": "Sources",
 
   "home.welcome": "Bienvenue",
@@ -52,23 +52,23 @@
   "proc.map": "Carte",
   "proc.export": "Exporter CSV"
   ,
-  "build.title": "Construire — Atelier",
+  "build.title": "Vos Arbitrages",
   "build.scoreboard": "Tableau de bord",
-  "build.mass_dials": "Réglages par masse",
-  "build.piece_dials": "Réglages par pièce",
+  "build.mass_dials": "Vos Orientations",
+  "build.piece_dials": "Mesures Concrètes",
   "build.expenditures": "Dépenses",
   "build.revenues": "Recettes",
   "build.delta_exp": "ΔDépenses (estim.)",
   "build.delta_rev": "ΔRecettes (estim.)",
-  "build.resolution": "Résolution",
-  "build.resolution_meter": "Jauge de résolution",
+  "build.resolution": "Cohérence",
+  "build.resolution_meter": "Indice de Cohérence",
   "build.distance": "Distance",
-  "build.explain": "Expliquer",
-  "build.target": "Cible",
-  "build.specified": "Spécifié",
-  "build.remaining": "Restant",
-  "build.target_met": "Cible atteinte.",
-  "build.distribute_hint": "Répartissez le montant restant entre les pièces clés. Les curseurs sont contraints à la somme lors de l’application.",
+  "build.explain": "Détails",
+  "build.target": "Objectif",
+  "build.specified": "Financé",
+  "build.remaining": "À financer",
+  "build.target_met": "Objectif atteint.",
+  "build.distribute_hint": "Une orientation politique doit s'appuyer sur des mesures concrètes. Identifiez les leviers de financement pour assurer la cohérence de votre vision.",
   "build.presets": "Préréglages",
   "build.preset_even": "Égal",
   "build.preset_proportional": "Proportionnel",
